--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
-Description: This is a Description.
+Description: Open Case Studies: Disparities in Youth Disconnection
 License: CC BY-NC 3.0
-Authors@R: person(given = "Just",
-           family = "Placeholder",
-           email = "blah@gmail.com")
-Package: ocs.bloomberg.emissions.case.study
+Authors@R: c(
+    person(c("Stephanie", "C."), "Hicks", role = c("aut", "cre"),
+    email = "shicks19@jhu.edu",
+    comment = c(ORCID = "0000-0002-7858-0231")),
+    person("Carrie", "Wright", role = "aut"))
+Package: ocs-bp-youth-disconnection
 Type: package
-Title: Open Case Studies
-Version: 0.0.1
+Title: Disparities in Youth Disconnection
+Version: 0.99.0
 Depends: R (>= 4.0)
 Imports:
     here,
@@ -33,3 +35,4 @@ Imports:
     tesseract, 
     Kendall
 VignetteBuilder: knitr
+Encoding: UTF-8
