--- a/.github/workflows/render-readme.yaml
+++ b/.github/workflows/render-readme.yaml
@@ -3,11 +3,11 @@ on:
     paths:
       - README.Rmd
 
-name: Render README
+name: render-README
 
 jobs:
   render:
-    name: Render README
+    name: render-README
     runs-on: macOS-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
