--- a/.github/workflows/render-index.yaml
+++ b/.github/workflows/render-index.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
       - uses: r-lib/actions/setup-pandoc@v1
-      - name: Install rmarkdown, remotes, and dependencies
+      - name: Install remotes, rmarkdown, dependencies
         run: |
           install.packages("remotes")
           remotes::install_cran("rmarkdown")
