cleaning up readme and git action yaml files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,27 +14,23 @@ Imports:
     here,
     pdftools,
     magick,
-    readr,
+    tesseract, 
+    knitr, 
     dplyr,
-    tibble,
-    magrittr,
     stringr,
-    purrr,
+    magrittr,
     tidyr,
-    forcats,
+    tibble,
     ggplot2,
     directlabels,
-    qpdf,
-    Rcpp,
+    cowplot, 
+    forcats,
+    Kendall, 
+    patchwork,
+    DT
     jpeg, 
     png, 
     testthat, 
-    rmarkdown,
-    knitr, 
-    tesseract, 
-    Kendall, 
-    patchwork,
-    cowplot, 
-    DT
+    rmarkdown
 VignetteBuilder: knitr
 Encoding: UTF-8
